# Personal-Financial-Management

./: .gitignore  README.md
ai/: .env.example  00_fetch_metadata.py  01_full_feature_engineering.py  02_clean_unknown_metadata.py  02_universal_backtest.py  05_build_index.py  06_search_pattern.py  07_create_global_context.py  08_add_technical_features.py  api_server.py  predict.py  requirements.txt  train.ipynb
backend/: .env  package-lock.json  package.json  reset_data.js  seed_expense.js  seed_income.js  server.js  test_calculate_change.js  test_price_change_formulas.js  test_stock_data.js  test_ticker_api.js  test_ticker_fix.js
backend/controllers/: assetsController.js  authController.js  dashboardController.js  (+7 more)
finance_chatbot/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TOOL_DESCRIPTION.md  main.py  manual_test_tools.py  pyproject.toml  requirements.txt  run_example.py  test_new_tools.py
finance_chatbot/finance_agent/: agent.py  gemini_wrapper.py  models.py  prompts.py  tool_registry.py  utils.py  vector_index.py
finance_chatbot/finance_agent/tools/: advanced_ratios.py  candlestick_chart.py  cashflow_analysis.py  chart.py  fundamentals.py  google_search.py  market_overview.py  news.py  pdf_parse.py  peer_comparison.py  portfolio_analytics.py  portfolio_simulator.py  ratios.py  risk_metrics.py  stock_price.py  stock_symbol.py  technical_indicators.py  valuation.py
finance_chatbot/test/: test_chart.py  test_fundamentals.py  test_google_search.py  test_news.py  test_pdf_parse.py  test_ratios.py  test_stock_price.py  test_stock_symbol.py
(+70 files in other folders)
