[project]
name = "financialapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "jsonschema>=4.25.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "yfinance>=0.2.65",
]
